After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695905 - GTask is leaked in ephy_session_save
GTask is leaked in ephy_session_save
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-15 12:00 UTC by Xan Lopez
Modified: 2013-03-16 13:22 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Xan Lopez 2013-03-15 12:00:12 UTC
==24468== 396 (200 direct, 196 indirect) bytes in 1 blocks are definitely lost in loss record 11,055 of 11,594
==24468==    at 0x4A0887C: malloc (vg_replace_malloc.c:270)
==24468==    by 0x7D8775E: g_malloc (gmem.c:159)
==24468==    by 0x7DA0005: g_slice_alloc (gslice.c:1003)
==24468==    by 0x7DA0045: g_slice_alloc0 (gslice.c:1029)
==24468==    by 0x7D08864: g_type_create_instance (gtype.c:1892)
==24468==    by 0x7CEEEE5: g_object_constructor (gobject.c:1855)
==24468==    by 0x7CEE332: g_object_newv (gobject.c:1638)
==24468==    by 0x7CEE0C2: g_object_new (gobject.c:1548)
==24468==    by 0x7BC4DB2: g_task_new (gtask.c:691)
==24468==    by 0x45315D: ephy_session_save (ephy-session.c:952)
==24468==    by 0x4521A6: window_added_cb (ephy-session.c:464)
==24468==    by 0x7CEA7EE: g_cclosure_marshal_VOID__OBJECT (gmarshal.c:1272)
==24468==    by 0x7CE5BEC: g_closure_invoke (gclosure.c:777)
==24468==    by 0x7D03892: signal_emit_unlocked_R (gsignal.c:3584)
==24468==    by 0x7D02ADA: g_signal_emit_valist (gsignal.c:3328)
==24468==    by 0x7D03022: g_signal_emit (gsignal.c:3384)
==24468==    by 0x743CE52: gtk_application_add_window (gtkapplication.c:836)
==24468==    by 0x77567BB: gtk_window_set_application (gtkwindow.c:2777)
==24468==    by 0x77531A9: gtk_window_set_property (gtkwindow.c:1286)
==24468==    by 0x7CED99D: object_set_property (gobject.c:1358)
Comment 1 Xan Lopez 2013-03-16 13:22:21 UTC
Fixed in 0a5d0060f7fb508da30040b09d1035aa3f40b2e3