ephy-session: fix GTask leak

g_task_run_in_thread already refs the task, so we have to unref it
ourselves after calling it.

https://bugzilla.gnome.org/show_bug.cgi?id=695905